fix(map): Add overflow to map container (#3491)
* fix(map): Add overflow to map container

* Update snapshot

* Update css

* Remove unused var

* Add back examples

--- a/ui/components/map/base/_index.scss
+++ b/ui/components/map/base/_index.scss
@@ -49,7 +49,9 @@
 .slds-has-coordinates {
   display: flex;
   flex-wrap: wrap;
+  overflow: auto;
   max-height: rem(660px);
+  background: $color-background-alt;
 
   .slds-map:before {
     padding-top: 75%;
